--- a/style.css
+++ b/style.css
@@ -6,7 +6,14 @@ background-color: rgb(247, 229, 232);
     font-family: 'Sigmar', cursive;
 }
 
-.body-style{
+body{
     background-color: rgb(218, 199, 202);
 }
 
+.button-style{
+    background-color: pink;
+}
+
+.nav-link{
+    font-family: 'Castoro Titling', cursive;
+}
