--- a/style.css
+++ b/style.css
@@ -27,3 +27,7 @@ h2{
     font-family: 'Sigmar', cursive;
     color: rgb(187, 118, 251);
 }
+.p-style{
+    font-family: 'Castoro Titling', cursive;
+    font-size: 20px;
+}
