--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,22 @@
 header {
-  background-color: nth pink, rgb(254, 123, 145), rgb(254, 234, 238), rgb(244, 88, 88) 248, 74, 74 248, 74, 74 251, 49, 49, rgb(127, 94, 94), red rgb(247, 229, 232), 7;
+  background-color: rgb(247, 229, 232);
+  font-family: "Sigmar", cursive;
 }
 header nav {
-  border: 1px solid darken rgb(218, 199, 202), 20%;
+  border: 1px solid darken rgb(138, 0, 23), 20%;
 }
 header nav ul {
   list-style-type: none;
 }
 header nav ul li a {
   text-decoration: none;
-  background-color: rgb(218, 199, 202);
-  /* & */
+  background-color: rgb(138, 0, 23);
+  font-family: "Sigmar", cursive;
 }
 header nav ul li a:hover {
-  text-decoration: underline;
-  background-color: lighten rgb(218, 199, 202), 20%;
+  text-decoration: none;
+  transform: scale(1.3);
+  background-color: lighten rgb(247, 229, 232) 20%;
 }
 
 /*# sourceMappingURL=style.css.map */
