--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,19 @@
-header {
-  background-color: rgb(247, 229, 232);
-  font-family: "Sigmar", cursive;
-}
-header nav {
-  border: 1px solid darken rgb(138, 0, 23), 20%;
-}
-header nav ul {
-  list-style-type: none;
-}
-header nav ul li a {
-  text-decoration: none;
-  background-color: rgb(138, 0, 23);
-  font-family: "Sigmar", cursive;
-}
-header nav ul li a:hover {
-  text-decoration: none;
-  transform: scale(1.3);
-  background-color: lighten rgb(247, 229, 232) 20%;
-}
+/* Error: Undefined variable.
+ *    ,
+ * 10 | background-color: nth ($colores,4);
+ *    |                        ^^^^^^^^
+ *    '
+ *   scss\base\_mixins.scss 10:24     @import
+ *   scss\component\_footer.scss 4:9  @import
+ *   scss\style.scss 1:9              root stylesheet */
 
-/*# sourceMappingURL=style.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a    \2577 \a 10 \2502  background-color: nth ($colores,4);\d\a    \2502                         ^^^^^^^^\a    \2575 \a   scss\\base\\_mixins.scss 10:24     @import\a   scss\\component\\_footer.scss 4:9  @import\a   scss\\style.scss 1:9              root stylesheet";
+}
