--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
 .button-style {
-  background-color: nth pink, rgb(254, 123, 145), rgb(254, 234, 238), rgb(244, 88, 88) 248, 74, 74 248, 74, 74 251, 49, 49, rgb(127, 94, 94), red rgb(247, 229, 232), 4;
+  background-color: rgb(212, 116, 132);
+}
+
+.button-style {
+  background-color: rgb(212, 116, 132);
+}
+
+.button-style {
+  background-color: nth pink, rgb(254, 123, 145), rgb(254, 234, 238), rgb(244, 88, 88) 248, 74, 74 248, 74, 74 251, 49, 49, rgb(127, 94, 94), red rgb(247, 229, 232), rgb(101, 14, 29), rgb(187, 118, 251), 4;
   border: 2px solid pink;
   padding: 20px;
 }
@@ -7,8 +15,18 @@
 .p-style {
   font-family: "Castoro Titling", cursive;
   font-size: 20px;
-  border: 2px solid;
-  padding: 20px;
+}
+
+body {
+  background-color: rgb(221, 179, 186);
+}
+body h1 {
+  font-family: "Bruno Ace", cursive;
+  color: rgb(101, 14, 29);
+}
+body h2 {
+  font-family: "Sigmar", cursive;
+  color: rgb(187, 118, 251);
 }
 
 footer {
@@ -17,7 +35,15 @@ footer {
 }
 
 .button-style {
-  background-color: nth pink, rgb(254, 123, 145), rgb(254, 234, 238), rgb(244, 88, 88) 248, 74, 74 248, 74, 74 251, 49, 49, rgb(127, 94, 94), red rgb(247, 229, 232), 4;
+  background-color: rgb(212, 116, 132);
+}
+
+.button-style {
+  background-color: rgb(212, 116, 132);
+}
+
+.button-style {
+  background-color: nth pink, rgb(254, 123, 145), rgb(254, 234, 238), rgb(244, 88, 88) 248, 74, 74 248, 74, 74 251, 49, 49, rgb(127, 94, 94), red rgb(247, 229, 232), rgb(101, 14, 29), rgb(187, 118, 251), 4;
   border: 2px solid pink;
   padding: 20px;
 }
@@ -25,8 +51,18 @@ footer {
 .p-style {
   font-family: "Castoro Titling", cursive;
   font-size: 20px;
-  border: 2px solid;
-  padding: 20px;
+}
+
+body {
+  background-color: rgb(221, 179, 186);
+}
+body h1 {
+  font-family: "Bruno Ace", cursive;
+  color: rgb(101, 14, 29);
+}
+body h2 {
+  font-family: "Sigmar", cursive;
+  color: rgb(187, 118, 251);
 }
 
 header {
@@ -34,14 +70,14 @@ header {
   font-family: "Sigmar", cursive;
 }
 header nav {
-  border: 1px solid darken rgb(212, 116, 132), 20%;
+  border: 1px solid darken rgb(221, 179, 186), 20%;
 }
 header nav ul {
   list-style-type: none;
 }
 header nav ul li a {
   text-decoration: none;
-  background-color: rgb(212, 116, 132);
+  background-color: rgb(221, 179, 186);
   font-family: "Sigmar", cursive;
 }
 header nav ul li a:hover {
@@ -51,7 +87,15 @@ header nav ul li a:hover {
 }
 
 .button-style {
-  background-color: nth pink, rgb(254, 123, 145), rgb(254, 234, 238), rgb(244, 88, 88) 248, 74, 74 248, 74, 74 251, 49, 49, rgb(127, 94, 94), red rgb(247, 229, 232), 4;
+  background-color: rgb(212, 116, 132);
+}
+
+.button-style {
+  background-color: rgb(212, 116, 132);
+}
+
+.button-style {
+  background-color: nth pink, rgb(254, 123, 145), rgb(254, 234, 238), rgb(244, 88, 88) 248, 74, 74 248, 74, 74 251, 49, 49, rgb(127, 94, 94), red rgb(247, 229, 232), rgb(101, 14, 29), rgb(187, 118, 251), 4;
   border: 2px solid pink;
   padding: 20px;
 }
@@ -59,8 +103,18 @@ header nav ul li a:hover {
 .p-style {
   font-family: "Castoro Titling", cursive;
   font-size: 20px;
-  border: 2px solid;
-  padding: 20px;
+}
+
+body {
+  background-color: rgb(221, 179, 186);
+}
+body h1 {
+  font-family: "Bruno Ace", cursive;
+  color: rgb(101, 14, 29);
+}
+body h2 {
+  font-family: "Sigmar", cursive;
+  color: rgb(187, 118, 251);
 }
 
 /*# sourceMappingURL=style.css.map */
