--- a/scss/base/_listas.scss
+++ b/scss/base/_listas.scss
@@ -5,4 +5,7 @@ rgb(254, 234, 238),
 rgb(244, 88, 88)(248, 74, 74)(248, 74, 74)(251, 49, 49),
 rgb(127, 94, 94),
 red 
-rgb(247, 229, 232);
+rgb(247, 229, 232),
+rgb(101, 14, 29),
+rgb(187, 118, 251);
+
